# remagnify

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  README.md  build.rs
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  install
src/: config.rs  layer_surface.rs  magnifier.rs  main.rs  monitor.rs  pool_buffer.rs  renderer.rs
src/input/: keyboard.rs  mod.rs  pointer.rs
src/protocols/: mod.rs
src/utils/: mod.rs  vector.rs
